# iros2015_folding

./: README.md
src/folding_control/launch/: fold_launch.launch
src/folding_control/src/: baxter_haptics.py  baxter_vision.py  communication_module.py  control_service.py  fold.py  fold_control.py  moveit_interface.py  moveit_test.py  transformation.py
src/folding_control/src/parameters/: left_mask_l.txt  left_mask_r.txt  primesense_intrinsic.txt  right_mask_l.txt  right_mask_r.txt
src/folding_control/src/xmlrpclib-1.0.1/: PKG-INFO  README  SimpleXMLRPCServer.py  echotest.py  selftest.py  setup.py  xmlrpc_handler.py  xmlrpclib.py  xmlrpcserver.py
src/folding_planner/src/: 2dregistration_v2.vcxproj  FoldPlanner.cpp  FoldPlanner.h  GarmentTemplate.cpp  GarmentTemplate.h  ImagePreprocessor.cpp  ImagePreprocessor.h  ImageUtil.h  ObjectSegmenter.h  Registration.cpp  Registration.h  datatypes.cpp  datatypes.h  distancefield.cpp  distancefield.h  main.cpp  registration.h
src/folding_planner_cmake/: .gitignore  CMakeLists.txt
src/folding_planner_cmake/lib/aerialeye/: CMakeLists.txt  glbutton.cpp  gldrawobject.cpp  glframework.cpp  glframework.h  glinit.h  glpanel.cpp  glpanel.h  glprogressbar.cpp
src/folding_planner_cmake/lib/blackbill/: CMakeLists.txt
src/folding_planner_cmake/lib/blackbill/delegator/: delegatorchain.h  eventhandler2.h
src/folding_planner_cmake/lib/blackbill/filepath/: filepath.cpp
src/folding_planner_cmake/lib/blackbill/instantlog/: instantlog.h  instantlogfile.h  instantlogformat.cpp
src/folding_planner_cmake/lib/blackbill/loader/: rawlfsloader.cpp  rawlfsloader.h
src/folding_planner_cmake/lib/blackbill/random/: random.c  random.h
src/folding_planner_cmake/lib/blackbill/result/: result.h
src/folding_planner_cmake/lib/blackbill/thread/: criticalsection.cpp  criticalsectionimpl.cpp  thread.cpp  thread.h  threadimpl.cpp
src/folding_planner_cmake/lib/bluetail/: CMakeLists.txt
src/folding_planner_cmake/lib/bluetail/image/: image.h  imageiobmp.h  imageiohdr.h  imageioutil.h
src/folding_planner_cmake/lib/bluetail/loader/: objectloader.h
src/folding_planner_cmake/lib/bluetail/material/: material.h
src/folding_planner_cmake/lib/bluetail/objectmodel/: triangleset.h
src/folding_planner_cmake/project/2dregistration_v2/: CMakeLists.txt  FoldPlanner.cpp  FoldPlanner.h  ImagePreprocessor.cpp  ImagePreprocessor.h  ImageUtil.cpp  ImageUtil.h  ObjectSegmenter.cpp  ObjectSegmenter.h  datatypes.cpp  datatypes.h  distancefield.cpp  distancefield.h  garment_template.cpp  garment_template.h  main.cpp  mesh2d.cpp  mesh2d.h  registration.cpp  registration.h
src/folding_planner_cmake/project/2dregistration_v2/maya_trajectory_pants/: trajectory_left_arm_bottom_up.txt
